fix spacing

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
 }
 
 .siteInfo {
+  align-self: center;
   left: 50%;
   aspect-ratio: 1/1.6;
   border: 0.5vmin solid var(--border);
